# py_cv

./: CMakeLists.txt  test_cv2_cpp.py  wechat_scanner.cpp
.github/scripts/: bundle_macos.sh
.github/workflows/: build.yml
